# SearingStoneCalc

./: SearingStoneProfit.sln
SearingStoneProfit/: CMakeLists.txt  SearingStoneProfit.cpp  SearingStoneProfit.vcxproj  SearingStoneProfit.vcxproj.filters
